added basic html and links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
+<!DOCTYPE html>
 <head>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <button id="start">Start</button>
+        <p id="timer"></p>
+    </header>
+    <main>
+        <section id="gameBox">
+            <p id="question"></p>
+            <button id="answer1"></button>
+            <button id="answer2"></button>
+            <button id="answer3"></button>
+        </section>
+        <section id="scoreBox">
+            <p id="yourScore"></p>
+            <input type="text" id="yourInit">
+            <input type="submit">
+            <p id="topScore1"></p>
+            <p id="topScore2"></p>
+            <p id="topScore3"></p>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
