--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
         <p id="timer"></p>
     </header>
     <main>
-        <section id="gameBox">
-            <p id="question"></p>
-            <button id="answer1"></button>
-            <button id="answer2"></button>
-            <button id="answer3"></button>
+        <section id="gameBox1">
+            <p id="questionOne">How many conjuring movies are there?</p>
+            <button id="oneAnswer1">8</button>
+            <button id="oneAnswer2">7</button>
+            <button id="oneAnswer3">10</button>
+        </section>
+        <section id="gameBox2">
+            <p id="questionTwo">Which of these is NOT a daedric prince?</p>
+            <button id="twoAnswer1">Meridia</button>
+            <button id="twoAnswer2">Azura</button>
+            <button id="twoAnswer3">Sithis</button>
+        </section>
+        <section id="gameBox3">
+            <p id="questionThree">Which of these is NOT a raid boss in World of Warcraft?</p>
+            <button id="threeAnswer1">Queen Azshara</button>
+            <button id="threeAnswer2">Hogger</button>
+            <button id="threeAnswer3">Illidan Stormrage</button>
         </section>
         <section id="scoreBox">
             <p id="yourScore"></p>
