--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
             <button id="threeAnswer3">Illidan Stormrage</button>
         </section>
         <section id="scoreBox">
-            <p id="yourScore"></p>
-            <input type="text" id="yourInit">
+            <input type="text" id="yourInit" name="Initials" maxlength="3" minlength="3">
             <input type="submit">
-            <p id="topScore1"></p>
-            <p id="topScore2"></p>
-            <p id="topScore3"></p>
+            <p id="topScore"></p>
+            <p id="yourScore"></p>
         </section>
     </main>
     <script src="script.js"></script>
